[gd_scene load_steps=9 format=3 uid="uid://uw6mjftj51xj"]

[ext_resource type="PackedScene" uid="uid://qho2h8nabdaq" path="res://Scenes/letter.tscn" id="1_ebmjs"]
[ext_resource type="Script" uid="uid://bs6pkiqbhwhpb" path="res://Scripts/game.gd" id="1_qxrlw"]
[ext_resource type="PackedScene" uid="uid://mqtqs3sw2e8o" path="res://Scenes/background.tscn" id="2_wowpa"]
[ext_resource type="PackedScene" uid="uid://mu8lmro4gd41" path="res://Scenes/subject.tscn" id="3_wrm1d"]
[ext_resource type="PackedScene" uid="uid://dod3wlgmdrxsp" path="res://Scenes/answer.tscn" id="4_3dryh"]
[ext_resource type="PackedScene" uid="uid://0gydjk0qwxke" path="res://Scenes/round.tscn" id="6_i6g32"]
[ext_resource type="PackedScene" uid="uid://bwshwck4ejy70" path="res://Scenes/modal_settings.tscn" id="7_1l0tm"]
[ext_resource type="PackedScene" uid="uid://c7ufm12iiqvda" path="res://Scenes/menu.tscn" id="8_menu"]

[node name="Game" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qxrlw")

[node name="TimerSpin" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="TimerAutostop" type="Timer" parent="."]
one_shot = true

[node name="Background" parent="." instance=ExtResource("2_wowpa")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 230
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Letter" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_ebmjs")]
layout_mode = 2

[node name="Subject" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_wrm1d")]
layout_mode = 2

[node name="Answer" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_3dryh")]
layout_mode = 2

[node name="Round" parent="." instance=ExtResource("6_i6g32")]
layout_mode = 2
size_flags_vertical = 8

[node name="Menu" parent="." instance=ExtResource("8_menu")]
layout_mode = 2

[node name="ModalSettings" parent="." instance=ExtResource("7_1l0tm")]
visible = false
layout_mode = 2

[connection signal="signal_spin_finalize" from="." to="MarginContainer/VBoxContainer/Letter" method="_on_game_signal_spin_finalize"]
[connection signal="signal_spin_finalize" from="." to="MarginContainer/VBoxContainer/Subject" method="_on_game_signal_spin_finalize"]
[connection signal="signal_spin_start" from="." to="MarginContainer/VBoxContainer/Letter" method="_on_game_signal_spin_start"]
[connection signal="timeout" from="TimerSpin" to="." method="_on_timer_spin_timeout"]
[connection signal="timeout" from="TimerSpin" to="MarginContainer/VBoxContainer/Letter" method="_on_timer_spin_timeout"]
[connection signal="timeout" from="TimerAutostop" to="." method="_on_timer_autostop_timeout"]
[connection signal="signal_round_finished" from="Round" to="." method="_on_round_signal_round_finished"]
[connection signal="signal_help_pressed" from="Menu" to="." method="_on_menu_signal_help_pressed"]
[connection signal="signal_open_settings" from="Menu" to="." method="_on_menu_signal_open_settings"]
[connection signal="signal_play_pressed" from="Menu" to="." method="_on_menu_signal_play_pressed"]
